# graphite-addon-examples

./: CMakeLists.txt  README.md  delete_face_addon.cpp  delete_facet_addon.cpp  facet_corners_test.cpp  hex_lace_select.cpp  hex_layer_select.cpp  hex_layer_split.cpp  hex_layer_subdivide.cpp  hex_layer_subdivide_addon.cpp  hex_scaled_jacobian.cpp  hex_scaled_jacobian_addon.cpp  smoother_addon.cpp  step_loader.cpp  step_loader_addon.cpp  tag_feature_lines_addon.cpp
.github/workflows/: continuous.yml
